# vanet_ids

./: .gitignore  Makefile  README.md  app_logging.py  config.py  data_processor.py  federated_learning.py  main.py  metrics.py  models.py  pyproject.toml  requirements.txt  runtime_utils.py  schemas.py
.codin/specs/federated-learning-vanet-ids-thesis/: design.md  plan.md  progress.md  requirements.md
.codin/specs/project-familiarization/: design.md  plan.md  progress.md  requirements.md
.github/workflows/: ci.yml
SCUT-thesis/: Makefile  main.bib  main.tex  scutthesis.cls
SCUT-thesis/docs/: abstract.tex  ack.tex  appendix1.tex  chap01.tex  chap02.tex  chap03.tex  chap04.tex  chap05.tex  conclusion.tex  info.tex
configs/: default.toml
docs/: experimental_design.md  experimental_results_summary.md
tests/: test_config.py  test_data_processor.py  test_federated_learning.py  test_main.py  test_models.py
